# 5ShotsOfKafkaInK8sBar

./: .gitignore  README.md
configs/: hdfs-datanode1-statefulset.yaml  hdfs-datanote2-statefulset.yaml  hdfs-namenode-statefulset.yaml  kafka-nodeport.yaml  kafka-pdb.yaml  kafka-statefulset.yaml  kafka.yaml  pvc-datanode1.yaml  pvc-datanode2.yaml  pvc-namenode.yaml  zookeeper-configmap.yaml  zookeeper-pdb.yaml  zookeeper-statefulset.yaml  zookeeper.yaml
configs/kafka/: kafka-statefulset.yaml
kind-config/: kind-config.yaml
rust-producer-stunning/: Cargo.toml
rust-producer-stunning/src/: main.rs
rust_producer_meteo/: .gitignore  Cargo.toml
rust_producer_meteo/config/: apikey.tolm  apiparams.json
rust_producer_meteo/src/: api.rs  main.rs
