[package]
name = "rust_producer_meteo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "*", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3"
lazy_static = "1.4.0"
